--- a/index.html
+++ b/index.html
@@ -38,6 +38,30 @@
 </script>
 </head>
 <body>
-    <div id="root"></div>
+        <div id="root"></div>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/12.8.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyA1lFGYFVpa1hSMmrvLnAlGtsWvPp_z8js",
+    authDomain: "mononoto-3ebbb.firebaseapp.com",
+    projectId: "mononoto-3ebbb",
+    storageBucket: "mononoto-3ebbb.firebasestorage.app",
+    messagingSenderId: "938448665623",
+    appId: "1:938448665623:web:bb0aa5c5d3f45828e2b052",
+    measurementId: "G-49D8NJSYZB"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
+
 </body>
 </html>
